[package]
name = "collage-bg"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bg-setter = { version = "0.1.0", git="https://github.com/cmaves/bg-setter" }
image = "0.22.0"
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1.3.4"
xcb  = "0.9"
rayon = "1.3.0"

[profile.release]
lto = true
